--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Your app name</title>
+    <title>Streamlit for Geospatial</title>
     <style type="text/css">
       html {
         overflow: auto;
