--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         overflow-x: hidden;
       }
     </style>
+
+    <meta
+      name="google-site-verification"
+      content="Pj0MO2sIhMjNGx94ExwGxJN_hGe7TPyTkluSBoWYgUU"
+    />
   </head>
   <body>
     <iframe
@@ -36,5 +41,20 @@
       allow="geolocation"
     >
     </iframe>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-3ETBQZJNLD"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-3ETBQZJNLD");
+    </script>
   </body>
 </html>
