Added Google AdSense

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
       name="google-site-verification"
       content="Pj0MO2sIhMjNGx94ExwGxJN_hGe7TPyTkluSBoWYgUU"
     />
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6224089686474451"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <iframe
