Updated Google Analytics

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-3ETBQZJNLD"
+      src="https://www.googletagmanager.com/gtag/js?id=G-6DEEHYPB5Y"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -60,7 +60,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-3ETBQZJNLD");
+      gtag("config", "G-6DEEHYPB5Y");
     </script>
   </body>
 </html>
