--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <iframe
-      src="https://share.streamlit.io/giswqs/streamlit-geospatial/app.py"
+      src="https://geospatial.streamlitapp.com"
       frameborder="0"
       marginheight="0"
       marginwidth="0"
