--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       }
     </style>
 
-    <meta
+    <!-- <meta
       name="google-site-verification"
       content="Pj0MO2sIhMjNGx94ExwGxJN_hGe7TPyTkluSBoWYgUU"
     />
@@ -33,7 +33,7 @@
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6224089686474451"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <iframe
@@ -49,7 +49,7 @@
     </iframe>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-6DEEHYPB5Y"
     ></script>
@@ -61,6 +61,6 @@
       gtag("js", new Date());
 
       gtag("config", "G-6DEEHYPB5Y");
-    </script>
+    </script> -->
   </body>
 </html>
