--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Streamlit Embed</title>
+      <title>Streamlit for Geospatial</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--begin first part of fixing Iframe scrollbar HERE -->
